# wfpc2tools

./: .coveragerc  .gitignore  README.md  RECON-INFO  azure-pipelines.yml  defsetup.py  new_setup.cfg  pyproject.toml  setup.cfg  setup.py
docs/source/: conf.py  index.rst  wfpc2cte.rst  wfpc2destreak.rst  wfpc2util.rst
lib/: __init__.py  cwdutil.py  opusutil.py  wfpc2cte.py  wfpc2destreak.py  wfpc2util.py
lib/wfpc2tools/: __init__.py  cwdutil.py  opusutil.py  wfpc2cte.py  wfpc2destreak.py  wfpc2util.py
wfpc2tools/: __init__.py  cwdutil.py  wfpc2cte.py  wfpc2destreak.py
wfpc2tools/tests/: test_noop.py
