[metadata]
name = wfpc2tools
version = 1.0.3.dev
author = Warren Hack, Nadezhda Dencheva, David Grumm
author-email = help@stsci.edu
home-page = http://www.stsci.edu/resources/software_hardware/stsci_python
summary = Tools for use with WFPC2 (Wide Field and Planetary Camera 2)
classifier = 
	Intended Audience :: Science/Research
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Software Development :: Libraries :: Python Modules
requires-python = >=2.6
requires-dist = 
	stsci.tools
	stsci.convolve
	stsci.imagestats
	stsci.ndimage
	astropy (>=0.3.1)
	numpy (>=1.5.1)

[files]
packages_root = lib
packages = wfpc2tools

[global]
setup_hooks = 
	stsci.distutils.hooks.use_packages_root
	stsci.distutils.hooks.tag_svn_revision
	stsci.distutils.hooks.version_setup_hook

